fixed spacing issues

--- a/src/scss/small.scss
+++ b/src/scss/small.scss
@@ -119,3 +119,21 @@ input::-webkit-inner-spin-button {
 input[type=number] {
     -moz-appearance:textfield; /* Firefox */
 }
+
+// Team Generator
+#team-input-list {
+    display: flex;
+    flex-direction: column;
+    margin-top: 2em;
+}
+
+.teamName {
+    width: fit-content;
+    max-width: 50%;
+    min-width: 250px;
+    margin-bottom: 10px;
+}
+
+#teamSubmitButton {
+    max-width: fit-content;
+}
